--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -1,8 +1,82 @@
 /*
 COLORS:
-
 Light green: #7ed56f
 Medium green: #55c57a
 Dark green: #28b485
-
 */
+/* Mini Reset */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --grn-light: #7ed56f;
+  --grn-med: #55c57a;
+  --grn-dark: #28b485;
+}
+
+body {
+  padding: 20px;
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777777;
+}
+
+.header {
+  position: relative;
+  height: 95vh;
+  background-image:
+    linear-gradient(to bottom right,
+      rgba(126, 213, 111, 0.8),
+      rgba(40, 180, 133, 0.8)
+    ),
+    url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
+}
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.logo {
+  height: 30px; /* Only need height OR width- will scale automagically */
+}
+
+/* CENTERED Text without a flexbox */
+.text-box {
+  position: absolute;
+  top: 40%;  /* applies as relation to parent Elem */
+  left: 50%; /* applies as relation to parent Elem */
+  transform: translate(-50%, -50%); /* TRANSLATE relates to Element itself */
+}
+
+.heading-primary {
+  color: #eee;
+  text-transform: uppercase;
+}
+
+.heading-primary-main {
+  display: block;
+  font-size: 60px;
+  /* font-size: 4rem; */
+  font-weight: 400;
+  letter-spacing: 35px;
+
+}
+
+.heading-primary-sub {
+  display: block;
+  width: auto;
+  font-size: 20px;
+  /* font-size: 2rem; */
+  font-weight: 700;
+  letter-spacing: 17.4px;
+}
