--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -30,11 +30,11 @@ body {
   position: relative;
   height: 95vh;
   background-image:
-    linear-gradient(to bottom right,
-      rgba(126, 213, 111, 0.8),
-      rgba(40, 180, 133, 0.8)
-    ),
-    url(../img/hero.jpg);
+  linear-gradient(to bottom right,
+  rgba(126, 213, 111, 0.8),
+  rgba(40, 180, 133, 0.8)
+  ),
+  url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
@@ -42,8 +42,8 @@ body {
 
 .logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 20px;
+  left: 20px;
 }
 
 .logo {
@@ -61,22 +61,62 @@ body {
 .heading-primary {
   color: #eee;
   text-transform: uppercase;
+
+  backface-visibility: hidden; /* <<~~ There's a glitch in ANIMATING the titles and this is the fix??? (I can't see the glitch) */
 }
 
 .heading-primary-main {
   display: block;
   font-size: 60px;
-  /* font-size: 4rem; */
   font-weight: 400;
   letter-spacing: 35px;
 
+  animation-name: fadeInFromLeft;/* ANIMATION REQUIRES 2 ARGS - name as defined by @keyframes, and duration */
+  animation-duration: 1s;
+  animation-timing-function: ease-out; /* <<Optional..... see MDN for others */
+  /* animation-delay: 2s; */
+  /* animation-iteration-count: 3; */
+
+}
+/* ANIMATION FOR HERO TITLING */
+@keyframes fadeInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  80% {
+    transform: translateX(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .heading-primary-sub {
   display: block;
-  width: auto;
   font-size: 20px;
-  /* font-size: 2rem; */
   font-weight: 700;
   letter-spacing: 17.4px;
+  /* animation-name: fadeInFromRight; */
+  /* animation-duration: 1s; */
+  /* animation-timing-function: ease-out; ..... see MDN for others */
+  /* CONDENSE VERSION: */
+  animation: fadeInFromRight 1s ease-out;
+
+}
+
+/* ANIMATION FOR HERO TITLING */
+@keyframes fadeInFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  80% {
+    transform: translateX(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
