Adds complex button hover interactions and anim

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -29,12 +29,12 @@ body {
 .header {
   position: relative;
   height: 95vh;
-  background-image:
-  linear-gradient(to bottom right,
-  rgba(126, 213, 111, 0.8),
-  rgba(40, 180, 133, 0.8)
-  ),
-  url(../img/hero.jpg);
+  background-image: linear-gradient(
+      to bottom right,
+      rgba(126, 213, 111, 0.8),
+      rgba(40, 180, 133, 0.8)
+    ),
+    url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
@@ -50,15 +50,17 @@ body {
   height: 30px; /* Only need height OR width- will scale automagically */
 }
 
-/* CENTERED Text without a flexbox */
+/* CENTERED Text without a flexbox = left% - transformX% */
 .text-box {
   position: absolute;
-  top: 40%;  /* applies as relation to parent Elem */
+  top: 40%; /* applies as relation to parent Elem */
   left: 50%; /* applies as relation to parent Elem */
   transform: translate(-50%, -50%); /* TRANSLATE relates to Element itself */
+  text-align: center;
 }
 
 .heading-primary {
+  margin-bottom: 15px;
   color: #eee;
   text-transform: uppercase;
 
@@ -69,14 +71,13 @@ body {
   display: block;
   font-size: 60px;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 34px;
 
-  animation-name: fadeInFromLeft;/* ANIMATION REQUIRES 2 ARGS - name as defined by @keyframes, and duration */
+  animation-name: fadeInFromLeft; /* ANIMATION REQUIRES 2 ARGS - name as defined by @keyframes, and duration */
   animation-duration: 1s;
   animation-timing-function: ease-out; /* <<Optional..... see MDN for others */
   /* animation-delay: 2s; */
   /* animation-iteration-count: 3; */
-
 }
 /* ANIMATION FOR HERO TITLING */
 @keyframes fadeInFromLeft {
@@ -103,9 +104,7 @@ body {
   /* animation-timing-function: ease-out; ..... see MDN for others */
   /* CONDENSE VERSION: */
   animation: fadeInFromRight 1s ease-out;
-
 }
-
 /* ANIMATION FOR HERO TITLING */
 @keyframes fadeInFromRight {
   0% {
@@ -119,4 +118,72 @@ body {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+.btn {
+}
+
+.btn-fadeIn-animated {
+  animation: fadeInFromBottom 0.5s ease-out 0.75s; /* # after easing is DELAY */
+  animation-fill-mode: backwards; /* Sets the start as the same as @keyframe-0 */
+}
+
+@keyframes fadeInFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  90% {
+    transform: translateY(-5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  position: relative;
+  padding: 15px 40px;
+
+  text-transform: uppercase;
+  text-decoration: none;
+  border-radius: 100px;
+
+  transition: all 0.2s; /* CONDENSED VERSION + Transition ALL */
+}
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+.btn::after {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  transition: all 0.4s;
+}
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-white {
+  background: #eeeeee;
+  color: #777777;
+}
+.btn-white::after {
+  background: #eeeeee;
 }
