--- a/Natours/initialHeroScreen/css/style.css
+++ b/Natours/initialHeroScreen/css/style.css
@@ -6,13 +6,9 @@
   margin: 0;
   box-sizing: inherit; }
 
-:root {
-  --grn-light: #7ed56f;
-  --grn-med: #55c57a;
-  --grn-dark: #28b485; }
-
 html {
-  font-size: 62%; }
+  font-size: 62%;
+  /* SETS UP THE REM BASE */ }
 
 body {
   padding: 2rem;
@@ -20,7 +16,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #777777;
+  color: #777;
   box-sizing: border-box;
   /*Inherited Above*/ }
 
@@ -54,7 +50,7 @@ body {
 
 .heading-primary {
   margin-bottom: 1.5rem;
-  color: #eee;
+  color: #eeeeee;
   text-transform: uppercase;
   backface-visibility: hidden;
   /* <<~~ There's a glitch in ANIMATING the titles and this is the fix??? (I can't see the glitch) */ }
@@ -87,7 +83,7 @@ body {
   display: block;
   font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.7rem;
   /* animation-name: fadeInFromRight; */
   /* animation-duration: 1s; */
   /* animation-timing-function: ease-out; ..... see MDN for others */
@@ -104,6 +100,9 @@ body {
   100% {
     opacity: 1;
     transform: translateX(0); } }
+
+.btn {
+  font-size: 1.7rem; }
 
 .btn-fadeIn-animated {
   animation: fadeInFromBottom 0.5s ease-out 0.75s;
@@ -138,7 +137,7 @@ body {
 
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 1rem rgba(0, 0, 0, 0.5); }
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5); }
 
 .btn::after {
   content: '';
@@ -158,7 +157,7 @@ body {
 
 .btn-white {
   background: #eeeeee;
-  color: #777777; }
+  color: #777; }
 
 .btn-white::after {
   background: #eeeeee; }
