--- a/Natours/initialHeroScreen/sass/main.scss
+++ b/Natours/initialHeroScreen/sass/main.scss
@@ -1,3 +1,9 @@
+$clr-primary--light: #7ed56f;
+$clr-primary--med: #55c57a;
+$clr-primary--dark: #28b485;
+$clr-grey--dark: #777;
+$clr-white: #eeeeee;
+
 /* Mini Reset */
 *,
 *::before,
@@ -7,18 +13,14 @@
   box-sizing: inherit;
 }
 
-$clr-primary--light: #7ed56f;
-$clr-primary--med: #55c57a;
-$clr-primary--dark: #28b485;
-
-:root {
-  --grn-light: #7ed56f;
-  --grn-med: #55c57a;
-  --grn-dark: #28b485;
-}
+// :root {
+//   --grn-light: #7ed56f;
+//   --grn-med: #55c57a;
+//   --grn-dark: #28b485;
+// }
 
 html {
-  font-size: 62%;
+  font-size: 62%; /* SETS UP THE REM BASE */
 }
 
 body {
@@ -27,7 +29,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #777777;
+  color: $clr-grey--dark;
 
   box-sizing: border-box; /*Inherited Above*/
 }
@@ -67,7 +69,7 @@ body {
 
 .heading-primary {
   margin-bottom: 1.5rem;
-  color: #eee;
+  color: $clr-white;
   text-transform: uppercase;
 
   backface-visibility: hidden; /* <<~~ There's a glitch in ANIMATING the titles and this is the fix??? (I can't see the glitch) */
@@ -104,7 +106,7 @@ body {
   display: block;
   font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.7rem;
   /* animation-name: fadeInFromRight; */
   /* animation-duration: 1s; */
   /* animation-timing-function: ease-out; ..... see MDN for others */
@@ -127,6 +129,7 @@ body {
 }
 
 .btn {
+  font-size: 1.7rem;
 }
 
 .btn-fadeIn-animated {
@@ -166,7 +169,7 @@ body {
 }
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 1rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
 }
 .btn::after {
   content: '';
@@ -187,9 +190,9 @@ body {
 }
 
 .btn-white {
-  background: #eeeeee;
-  color: #777777;
+  background: $clr-white;
+  color: $clr-grey--dark;
 }
 .btn-white::after {
-  background: #eeeeee;
+  background: $clr-white;
 }
