--- a/Natours/initialHeroScreen/css/style.css
+++ b/Natours/initialHeroScreen/css/style.css
@@ -8,7 +8,7 @@
 
 html {
   font-size: 62%;
-  /* SETS UP THE REM BASE */ }
+  /* SETS UP THE REM BASE >>> 10 / 16px = 62% */ }
 
 body {
   padding: 2rem;
@@ -16,7 +16,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #777;
+  color: #777777;
   box-sizing: border-box;
   /*Inherited Above*/ }
 
@@ -28,17 +28,17 @@ body {
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%); }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   top: 2rem;
   left: 2rem; }
 
-.logo {
+.header__logo {
   height: 3rem;
   /* Only need height OR width- will scale automagically */ }
 
 /* CENTERED Text without a flexbox = left% - transformX% */
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   /* applies as relation to parent Elem */
@@ -55,7 +55,7 @@ body {
   backface-visibility: hidden;
   /* <<~~ There's a glitch in ANIMATING the titles and this is the fix??? (I can't see the glitch) */ }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
@@ -79,7 +79,7 @@ body {
     opacity: 1;
     transform: translateX(0); } }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
@@ -104,7 +104,7 @@ body {
 .btn {
   font-size: 1.7rem; }
 
-.btn-fadeIn-animated {
+.btn--animated-fadeIn {
   animation: fadeInFromBottom 0.5s ease-out 0.75s;
   /* # after easing is DELAY */
   animation-fill-mode: backwards;
@@ -155,9 +155,9 @@ body {
   transform: scaleX(1.4) scaleY(1.6);
   opacity: 0; }
 
-.btn-white {
+.btn--white {
   background: #eeeeee;
-  color: #777; }
+  color: #777777; }
 
-.btn-white::after {
+.btn--white::after {
   background: #eeeeee; }
