--- a/Natours/initialHeroScreen/css/style.css
+++ b/Natours/initialHeroScreen/css/style.css
@@ -1,56 +1,65 @@
+/* ANIMATION FOR HERO TITLING */
+@keyframes fadeInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+/* ANIMATION FOR HERO Sub-Titling */
+@keyframes fadeInFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+/* Animation for HERO Button */
+@keyframes fadeInFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(10rem); }
+  90% {
+    transform: translateY(-5px); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
 /* Mini Reset */
 *,
 *::before,
 *::after {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: inherit; }
 
 html {
-  font-size: 62%;
-  /* SETS UP THE REM BASE >>> 10 / 16px = 62% */ }
+  /* DEFINES WHAT 1REM IS */
+  font-size: 62.5%; }
 
 body {
-  padding: 2rem;
-  font-family: 'Lato', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #777777;
+  padding: 3rem;
   box-sizing: border-box;
   /*Inherited Above*/ }
 
-.header {
-  position: relative;
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%); }
-  .header__logo-box {
-    position: absolute;
-    top: 2rem;
-    left: 2rem; }
-  .header__logo {
-    height: 3rem;
-    /* Only need height OR width- will scale automagically */ }
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    /* applies as relation to parent Elem */
-    left: 50%;
-    /* applies as relation to parent Elem */
-    transform: translate(-50%, -50%);
-    /* TRANSLATE relates to Element itself */
-    text-align: center; }
+body {
+  color: #777777;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  line-height: 1.7; }
 
-/* CENTERED Text without a flexbox = left% - transformX% */
 .heading-primary {
   margin-bottom: 1.5rem;
   color: #eeeeee;
   text-transform: uppercase;
   backface-visibility: hidden;
-  /* <<~~ There's a glitch in ANIMATING the titles and this is the fix??? (I can't see the glitch) */ }
+  /* <<~~ There"s a glitch in ANIMATING the titles and this is the fix??? (I can"t see the glitch) */ }
   .heading-primary--main {
     display: block;
     font-size: 6rem;
@@ -116,35 +125,28 @@ body {
     .btn--white::after {
       background: #eeeeee; }
 
-/* ANIMATION FOR HERO TITLING */
-@keyframes fadeInFromLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem); }
-  80% {
-    transform: translateX(1rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
+.header {
+  position: relative;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%); }
+  .header__logo-box {
+    position: absolute;
+    top: 2rem;
+    left: 2rem; }
+  .header__logo {
+    height: 3rem;
+    /* Only need height OR width- will scale automagically */ }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    /* applies as relation to parent Elem */
+    left: 50%;
+    /* applies as relation to parent Elem */
+    transform: translate(-50%, -50%);
+    /* TRANSLATE relates to Element itself */
+    text-align: center; }
 
-/* ANIMATION FOR HERO Sub-Titling */
-@keyframes fadeInFromRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem); }
-  80% {
-    transform: translateX(-1rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
-
-/* Animation for HERO Button */
-@keyframes fadeInFromBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(10rem); }
-  90% {
-    transform: translateY(-5px); }
-  100% {
-    opacity: 1;
-    transform: translateY(0); } }
+/* CENTERED Text without a flexbox = left% - transformX% */
