--- a/Natours/initialHeroScreen/sass/main.scss
+++ b/Natours/initialHeroScreen/sass/main.scss
@@ -1,220 +1,14 @@
-$clr-primary--light: #7ed56f;
-$clr-primary--med: #55c57a;
-$clr-primary--dark: #28b485;
-$clr-grey--dark: #777777;
-$clr-white: #eeeeee;
-$clr-black: #000000;
+@import 'abstracts/_functions.scss';
+@import 'abstracts/_mixins.scss';
+@import 'abstracts/_variables.scss';
 
-/* Mini Reset */
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: inherit;
-}
+@import 'base/_animations.scss';
+@import 'base/_base.scss';
+@import 'base/_typography.scss';
+@import 'base/_utilities.scss';
 
-// :root {
-//   --grn-light: #7ed56f;
-//   --grn-med: #55c57a;
-//   --grn-dark: #28b485;
-// }
+@import 'components/_button.scss';
 
-html {
-  font-size: 62%; /* SETS UP THE REM BASE >>> 10 / 16px = 62% */
-}
+@import 'layout/_header.scss';
 
-body {
-  padding: 2rem;
-  font-family: 'Lato', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: $clr-grey--dark;
-
-  box-sizing: border-box; /*Inherited Above*/
-}
-
-.header {
-  position: relative;
-  height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($clr-primary--light, 0.8),
-      rgba($clr-primary--dark, 0.8)
-    ),
-    url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
-
-  // Takes advantage of SCSS naming possibilities
-  // the '&' will just prepend whatever the parent bracket is named
-  &__logo-box {
-    position: absolute;
-    top: 2rem;
-    left: 2rem;
-  }
-  &__logo {
-    height: 3rem; /* Only need height OR width- will scale automagically */
-  }
-  &__text-box {
-    position: absolute;
-    top: 40%; /* applies as relation to parent Elem */
-    left: 50%; /* applies as relation to parent Elem */
-    transform: translate(-50%, -50%); /* TRANSLATE relates to Element itself */
-    text-align: center;
-  }
-}
-// .header__logo-box {
-//   position: absolute;
-//   top: 2rem;
-//   left: 2rem;
-// }
-// .header__logo {
-//   height: 3rem; /* Only need height OR width- will scale automagically */
-// }
-
-/* CENTERED Text without a flexbox = left% - transformX% */
-// .header__text-box {
-//   position: absolute;
-//   top: 40%; /* applies as relation to parent Elem */
-//   left: 50%; /* applies as relation to parent Elem */
-//   transform: translate(-50%, -50%); /* TRANSLATE relates to Element itself */
-//   text-align: center;
-// }
-
-.heading-primary {
-  margin-bottom: 1.5rem;
-  color: $clr-white;
-  text-transform: uppercase;
-
-  backface-visibility: hidden; /* <<~~ There's a glitch in ANIMATING the titles and this is the fix??? (I can't see the glitch) */
-
-  &--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.4rem;
-
-    animation-name: fadeInFromLeft; /* ANIMATION REQUIRES 2 ARGS - name as defined by @keyframes, and duration */
-    animation-duration: 1s;
-    animation-timing-function: ease-out; /* <<Optional..... see MDN for others */
-    /* animation-delay: 2s; */
-    /* animation-iteration-count: 3; */
-  }
-  &--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.7rem;
-    /* animation-name: fadeInFromRight; */
-    /* animation-duration: 1s; */
-    /* animation-timing-function: ease-out; ..... see MDN for others */
-    /*** CONDENSE VERSION: ***/
-    animation: fadeInFromRight 1s ease-out;
-  }
-}
-
-.btn {
-  font-size: 1.7rem;
-
-  &--animated-fadeIn {
-    animation: fadeInFromBottom 0.5s ease-out 0.75s; /* # after easing is DELAY */
-    animation-fill-mode: backwards; /* Sets the start as the same as @keyframe-0 */
-  }
-
-  &:link,
-  &:visited {
-    display: inline-block;
-    position: relative;
-    padding: 1.5rem 4rem;
-
-    text-transform: uppercase;
-    text-decoration: none;
-    border-radius: 10rem;
-
-    transition: all 0.2s; /* CONDENSED VERSION ++ Transition ALL */
-  }
-  &:hover {
-    transform: translateY(-0.3rem);
-    // box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-    box-shadow: 0 1rem 2rem rgba($clr-black, 0.2);
-
-    &::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
-    }
-  }
-  &:active {
-    transform: translateY(-1px);
-    // box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0.5rem 1rem rgba($clr-black, 0.5);
-  }
-  &::after {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-
-    transition: all 0.4s;
-  }
-
-  &--white {
-    background: $clr-white;
-    color: $clr-grey--dark;
-
-    &::after {
-      background: $clr-white;
-    }
-  }
-}
-
-/* ANIMATION FOR HERO TITLING */
-@keyframes fadeInFromLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-  80% {
-    transform: translateX(1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-/* ANIMATION FOR HERO Sub-Titling */
-@keyframes fadeInFromRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-  80% {
-    transform: translateX(-1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-/* Animation for HERO Button */
-@keyframes fadeInFromBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(10rem);
-  }
-  90% {
-    transform: translateY(-5px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+@import 'pages/_home.scss';
